syntax = "proto3";

package pb;

option go_package = "github.com/paweldyl/blog-backend/pb";

message DeleteCommentRequest {
    string id = 1;
}


